<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    tools:context="com.example.pyc.myapplication.fragments.FragmentImport"
    android:layout_width="match_parent">

    <Button
        android:text="@string/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCancel"
        android:focusable="false"
        android:layout_below="@+id/txt_description"
        android:layout_alignStart="@+id/btnSave"
        android:minHeight="48dp"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/btnSave_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:layout_below="@+id/timePicker"
        android:layout_alignParentEnd="true" />

    <TimePicker
        android:layout_width="match_parent"
        android:id="@+id/timePicker"
        android:layout_height="wrap_content"
        android:hapticFeedbackEnabled="true"
        android:headerBackground="@android:color/holo_green_dark"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:numbersSelectorColor="@color/colorAccent" />

    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="114dp"
        android:id="@+id/btnColor"
        android:background="@mipmap/color_picker"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:hint="@string/hint"
        android:layout_height="wrap_content"
        android:id="@+id/txt_description"
        android:elevation="0dp"
        android:layout_alignBottom="@+id/btnSave"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/btnCancel" />

    <TextView
        android:text="Сегодня"
        android:clickable="true"
        android:id="@+id/dateView"
        android:layout_width="wrap_content"
        android:textSize="15sp"
        android:layout_height="30dp"
        android:gravity="bottom"
        android:layout_above="@+id/txt_description"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/btnAdd"
        android:background="@android:drawable/ic_input_add"
        android:layout_below="@+id/btnColor"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="13dp" />

</RelativeLayout>